# logbook-stubs

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  README.rst  agents.md  prek.toml  pyproject.toml
.github/workflows/: ci.yaml  ci.yml
docs/: advanced.rst  index.rst  simple.rst
docs/source/: conf.py  index.rst
examples/: auto-detect-handler.py  cli-app.py  journald-extra-fields.py  journald-simple.py
src/chameleon_log/: __init__.py  detectors.py  journald.py  legacy.py  rich.py
src/logbook/: __init__.pyi  base.pyi  handlers.pyi
tests/: conftest.py  test_rich_handler.py
