#:tombi schema.strict = false

[project]
name = "chameleon_log"
description = "Colourful handlers for Logbook, based on Rich and Journald."
readme = "README.rst"
authors = [
    { name = "Nguyễn Hồng Quân", email = "ng.hong.quan@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "logbook>=1.9.2",
    "rich>=14.3.3",
]
dynamic = ["version"]
keywords = ["logging", "logbook", "rich", "journald"]
license = "Apache-2.0"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.optional-dependencies]
journald = [
  "systemd-python >= 235; sys_platform == 'linux'",
]

[project.urls]
Repository = "https://github.com/hongquan/chameleon-log.git"
Documentation = "https://chameleon-log.readthedocs.io"
Changelog = "https://github.com/hongquan/chameleon-log/blob/main/CHANGELOG.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
test = [
    "logbook-stubs",
    "pytest>=9.0.2",
    "pytest-mock",
]
lint = [
    "ruff>=0.15.6",
]
dev = [
    "pre-commit>=4.5.1",
]
docs = [
    "sphinx-autobuild>=2025.8.25",
    "sphinx>=9.1.0",
    "sphinx-book-theme>=1.2.0",
    "myst-parser>=5.0.0",
    "sphinxcontrib-asciinema>=0.4.2",
]

[tool.hatch.version]
path = 'src/chameleon_log/__init__.py'

# Ref: https://hatch.pypa.io/latest/how-to/environment/workspace/
[tool.hatch.envs.default]
workspace.members = ["packages/*", "packages/logbook-stubs"]

[tool.uv.workspace]
members = ["packages/*", "packages/logbook-stubs"]

[tool.uv.sources]
logbook-stubs = { workspace = true }

[tool.ruff]
line-length = 120
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "*/static/CACHE/*",
]

[tool.ruff.lint]
select = ['E4', 'E7', 'E9', 'F', 'I', 'BLE001', 'ANN']

[tool.ruff.lint.isort]
combine-as-imports = true
lines-after-imports = 2

[tool.ruff.format]
quote-style = "single"

[tool.ty.src]
exclude = ["src/chameleon_log/legacy.py"]

[tool.pyrefly]
project-includes = [
    "**/*.py*",
    "**/*.ipynb",
]
