[project]
name = "logbook-stubs"
description = "Type stubs for logbook"
version = "0.3.0"
requires-python = ">=3.12"
license = "Apache-2.0"
readme = "README.md"
authors = [
    { name = "Nguyễn Hồng Quân", email = "ng.hong.quan@gmail.com" }
]
keywords = ["logging", "logbook", "typed"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Repository = "https://github.com/hongquan/chameleon-log.git"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/logbook"]
